syntax = "proto3";

package orders.v1;

option go_package = "github.com/ilyaytrewq/payments-service/gen/go/orders/v1;ordersv1";

import "google/protobuf/timestamp.proto";

service OrdersService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_NEW = 1;
  ORDER_STATUS_FINISHED = 2;
  ORDER_STATUS_CANCELLED = 3;
}

message Order {
  string order_id = 1;
  string user_id = 2;
  int64 amount = 3; // minimal currency units (e.g. cents/kopecks)
  string description = 4;
  OrderStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateOrderRequest {
  string user_id = 1;
  int64 amount = 2;
  string description = 3;

  // Optional: forwarded from REST Idempotency-Key
  string idempotency_key = 4;
}

message CreateOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  string user_id = 1;

  // Optional pagination
  int32 limit = 2;
  string page_token = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  string next_page_token = 2;
}

message GetOrderRequest {
  string user_id = 1;
  string order_id = 2;
}

message GetOrderResponse {
  Order order = 1;
}
